# datamosh

./: .gitignore  CMakeLists.txt  README.md  main.cpp
examples/: read.cpp  read_and_write.cpp  write.cpp
include/: ffmpeg_cpp.h
src/: ffmpeg_cpp.cpp
